# goit_python_web_hw_12

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
doc/: dot_env_example  openapi.json
hw12/: main.py
hw12/migrations/versions/: 17c303ff2079_init.py  630f719091ab_.py
hw12/src/: shemas.py
hw12/src/database/: models.py
hw12/src/repository/: cats.py  contacts.py  owners.py
hw12/src/routes/: contacts.py
hw12/src/services/: roles.py
hw12/src/shemas/: cat.py  contact.py  owner.py  users.py
hw12/static/client/: index.html  main.html
hw12/static/client/js/: app.js
hw12/templates/: index.html
scripts/: docker_build_docker-compose.cmd  docker_run_db.cmd  runserver.cmd  sql_alebic_init.cmd  sql_upgrade.cmd
